--- a/Index.html.html
+++ b/Index.html.html
@@ -7,8 +7,8 @@
 
 
 <body>
-<a href="ashleyBronzan.resume.html"Ashley Bronzan Resume </a>  <br/>
-<a href="Jaskaran_Singh.html"  Jaskaran Singh Resume    </a>     <br/>
+<a href="ashleyBronzan.resume.html">Ashley Bronzan Resume </a>  <br/>
+<a href="Jaskaran_Singh.html">Jaskaran Singh Resume    </a>     <br/>
 
 
 
