added Group memeber

--- a/Index.html.html
+++ b/Index.html.html
@@ -9,6 +9,8 @@
 <body>
 <a href="ashleyBronzan.resume.html">Ashley Bronzan Resume </a>  <br/>
 <a href="Jaskaran_Singh.html">Jaskaran Singh Resume    </a>     <br/>
+<a href="Ernie resume.html.html"> Ernie Resume </a>  <br/>
+
 
 
 
